add api documentation for survey
